--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,13 +3,13 @@ description: "A new Flutter project."
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.0
+  sdk: ">=3.7.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
-  flutter_bloc: ^9.1.1
+  provider: ^6.1.2
   smooth_page_indicator: ^1.2.1
   go_router: ^16.2.5
   shared_preferences: ^2.5.3
@@ -17,6 +17,7 @@ dependencies:
   flutter_svg: ^2.2.1
   carousel_slider: ^5.1.1
   intl: ^0.20.2
+  http: ^1.6.0
 
 dev_dependencies:
   flutter_test:
